--- a/,github/workflows/newsletter.yml
+++ b/,github/workflows/newsletter.yml
@@ -1,1 +1,53 @@
+name: AI & Māori Weekly Newsletter
 
+on:
+  schedule:
+    # Runs every Monday at 9:00 AM UTC (adjust timezone as needed)
+    - cron: '0 9 * * 1'
+  workflow_dispatch:  # Allows manual triggering
+    inputs:
+      test_mode:
+        description: 'Run in test mode (save to file only)'
+        required: false
+        default: 'false'
+
+jobs:
+  generate-newsletter:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        
+    - name: Create Google Service Account File
+      run: |
+        echo '${{ secrets.GOOGLE_SHEETS_CREDS }}' > service_account.json
+        
+    - name: Run Newsletter Bot
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        GMAIL_USER: ${{ secrets.GMAIL_USER }}
+        GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
+        GOOGLE_SHEETS_CREDS_PATH: service_account.json
+        TEST_MODE: ${{ github.event.inputs.test_mode }}
+      run: python newsletter_bot.py
+      
+    - name: Upload Newsletter Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: newsletter-html
+        path: newsletter_*.html
+        retention-days: 30
+        
+    - name: Cleanup
+      run: rm -f service_account.json
