--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.1.0
 gspread==5.12.0
 oauth2client==4.1.3
-schedule==1.2.0
 python-dotenv==1.0.0
+pandas==2.1.4
