--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-OPENAI_API_KEY=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
-GMAIL_USER=ia.maori.ai@gmail.com
-GMAIL_APP_PASSWORD=vicx sdjn pnea jzeu
-GOOGLE_SHEETS_CREDS_PATH=path/to/service_account.json
+OPENAI_API_KEY=your_openai_api_key_here
+GMAIL_USER=your_gmail_address@gmail.com
+GMAIL_APP_PASSWORD=your_16_character_app_password
+GOOGLE_SHEETS_CREDS_PATH=service_account.json
