--- a/,github/workflows/newsletter.yml
+++ b/,github/workflows/newsletter.yml
@@ -2,9 +2,8 @@ name: AI & Māori Weekly Newsletter
 
 on:
   schedule:
-    # Runs every Monday at 9:00 AM UTC (adjust timezone as needed)
     - cron: '0 9 * * 1'
-  workflow_dispatch:  # Allows manual triggering
+  workflow_dispatch:
     inputs:
       test_mode:
         description: 'Run in test mode (save to file only)'
